--- a/Servicentro2.0/index.html
+++ b/Servicentro2.0/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
+	<meta charset="UTF-8">
     <title>Servicentro</title>
     <link href="Content/bootstrap.min.css" rel="stylesheet" />
     <link href="Content/navbar-fixed-top.css" rel="stylesheet" />
@@ -9,15 +10,29 @@
 <body>
     <div class="navbar navbar-default navbar-fixed-top">
         <div class="container">
-            <a href="/" class="navbar-brand">Servicentro</a>
-            <ul class="nav navbar-nav nav-pills navbar-right">
-                <li><a href="#">conÛcenos</a></li>
-                <li><a href="#">m˙sica</a></li>
+			<div class='navbar-header'>
+				<a href="/" class="navbar-brand">Servicentro</a>
+				<button class='navbar-toggle collapsed' data-toggle='collapse' data-target='.navbar-nav' type='button'>
+					<span class='sr-only'>menu</span>
+					<span class='icon-bar'></span>
+					<span class='icon-bar'></span>
+					<span class='icon-bar'></span>
+				</button>
+			</div>
+
+            <ul class="nav navbar-nav navbar-right collapse navbar-collapse">
+                <li class='active'><a href="#">con√≥cenos</a></li>
+                <li><a href="#">m√∫sica</a></li>
                 <li><a href="#">letras</a></li>
                 <li><a href="#">galeria</a></li>
-                <li><a href="#">facebook</a></li>
-                <li><a href="#">youtube</a></li>
-                <li><a href="#">twitter</a></li>
+				<li><a href="#" data-toggle='dropdown'>redes sociales<span class='caret'></span></a>
+					<ul class='dropdown-menu'>
+						<li><a href="#">facebook</a></li>
+						<li><a href="#">youtube</a></li>
+						<li><a href="#">twitter</a></li>
+					</ul>
+				</li>
+				<li class='divider'></li>
                 <li><a href="#">contactanos</a></li>
             </ul>
         </div>
@@ -26,17 +41,18 @@
         <div class="row well well-sm">
             <div class="col-sm-6">
                 <h2>Sobre nosotros</h2>
-                <p>Somos un punto de encuentro en la ruta que recorren los jÛvenes Laicos y Cristianos. Un lugar lleno de luces, m˙sica y guitarras en que se detienen, comparten, celebran y recargan sus energÌas para continuar el viaje, llevando en la maleta un mensajeÖ que a veces pasar· desapercibido y otras ser· m·s explÌcito, pero que siempre los acompaÒar· en la ruta, vengan de donde vengan y vayan donde vayan. Somos CatÛlicos haciendo Rock. Somos....Servicentro</p>
+                <p>Somos un punto de encuentro en la ruta que recorren los j√≥venes Laicos y Cristianos. Un lugar lleno de luces, m√∫sica y guitarras en que se detienen, comparten, celebran y recargan sus energ√≠as para continuar el viaje, llevando en la maleta un mensaje‚Ä¶ que a veces pasar√° desapercibido y otras ser√° m√°s expl√≠cito, pero que siempre los acompa√±ar√° en la ruta, vengan de donde vengan y vayan donde vayan. Somos Cat√≥licos haciendo Rock.</p>
+				<p class='lead'>Somos... Servicentro!</p>
             </div>
             <div class="col-sm-5 col-sm-offset-1 hidden-xs">
-                <img class="img-responsive" src="img/10906738_10155087632695525_1281880861_o.jpg" />
+                <iframe class="embed-responsive-item"  width="100%" height="250" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/184590631&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
             </div>
         </div>
     </div>
 
-    <div class="container">
-        <h2>holi</h2>
-        <p>asjdksala djsakl djskladjs jdsajd kasljd asdjaskl djksladj skld jksal djksa djklsadj ksla djksladj askl</p>
+    <div class="footer">
+		<div class='container'>
+		</div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="Scripts/bootstrap.min.js"></script>
