--- a/Servicentro2.0/index.html
+++ b/Servicentro2.0/index.html
@@ -1,39 +1,40 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="es">
 <head>
 	<meta charset="UTF-8">
     <title>Servicentro</title>
     <link href="Content/bootstrap.min.css" rel="stylesheet" />
     <link href="Content/navbar-fixed-top.css" rel="stylesheet" />
+    <link href="Content/font-awesome.min.css" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     <div class="navbar navbar-default navbar-fixed-top">
         <div class="container">
-			<div class='navbar-header'>
-				<a href="/" class="navbar-brand">Servicentro</a>
-				<button class='navbar-toggle collapsed' data-toggle='collapse' data-target='.navbar-nav' type='button'>
-					<span class='sr-only'>menu</span>
-					<span class='icon-bar'></span>
-					<span class='icon-bar'></span>
-					<span class='icon-bar'></span>
-				</button>
-			</div>
-
+            <div class='navbar-header'>
+                <a href="/" class="navbar-brand">Servicentro</a>
+                <button class='navbar-toggle collapsed' data-toggle='collapse' data-target='.navbar-nav' type='button'>
+                    <span class='sr-only'>menu</span>
+                    <span class='icon-bar'></span>
+                    <span class='icon-bar'></span>
+                    <span class='icon-bar'></span>
+                </button>
+            </div>
             <ul class="nav navbar-nav navbar-right collapse navbar-collapse">
-                <li class='active'><a href="#">conócenos</a></li>
-                <li><a href="#">música</a></li>
-                <li><a href="#">letras</a></li>
-                <li><a href="#">galeria</a></li>
-				<li><a href="#" data-toggle='dropdown'>redes sociales<span class='caret'></span></a>
-					<ul class='dropdown-menu'>
-						<li><a href="#">facebook</a></li>
-						<li><a href="#">youtube</a></li>
-						<li><a href="#">twitter</a></li>
-					</ul>
-				</li>
-				<li class='divider'></li>
-                <li><a href="#">contactanos</a></li>
+                <li class='active'><a href="#"><i class="fa fa-question"></i> conócenos</a></li>
+                <li><a href="#"><i class="fa fa-music"></i> música</a></li>
+                <li><a href="#"><i class="fa fa-book"></i> letras</a></li>
+                <li><a href="#"><i class="fa fa-picture-o"></i> galeria</a></li>
+                <li>
+                    <a href="#" data-toggle='dropdown'><i class="fa fa-group"></i> redes sociales<span class='caret'></span></a>
+                    <ul class='dropdown-menu'>
+                        <li><a href="#"><i class="fa fa-facebook"></i> facebook</a></li>
+                        <li><a href="#"><i class="fa fa-youtube"></i> youtube</a></li>
+                        <li><a href="#"><i class="fa fa-twitter"></i> twitter</a></li>
+                    </ul>
+                </li>
+                <li class='divider'></li>
+                <li><a href="#"><i class="fa fa-envelope"></i> contactanos</a></li>
             </ul>
         </div>
     </div>
@@ -42,17 +43,22 @@
             <div class="col-sm-6">
                 <h2>Sobre nosotros</h2>
                 <p>Somos un punto de encuentro en la ruta que recorren los jóvenes Laicos y Cristianos. Un lugar lleno de luces, música y guitarras en que se detienen, comparten, celebran y recargan sus energías para continuar el viaje, llevando en la maleta un mensaje… que a veces pasará desapercibido y otras será más explícito, pero que siempre los acompañará en la ruta, vengan de donde vengan y vayan donde vayan. Somos Católicos haciendo Rock.</p>
-				<p class='lead'>Somos... Servicentro!</p>
+                <p class='lead'>Somos... Servicentro!</p>
             </div>
             <div class="col-sm-5 col-sm-offset-1 hidden-xs">
-                <iframe class="embed-responsive-item"  width="100%" height="250" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/184590631&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+                <iframe class="embed-responsive-item" width="100%" height="250" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/184590631&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
             </div>
         </div>
     </div>
 
-    <div class="footer">
-		<div class='container'>
-		</div>
+    <div class='footer'>
+        <div class='container'>
+            <div class='row'>
+                <h1>se</h1>
+                <p>hola</p>
+                <p><a href="#">content</a></p>
+            </div>
+        </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="Scripts/bootstrap.min.js"></script>
