--- a/Servicentro2.0/index.html
+++ b/Servicentro2.0/index.html
@@ -5,7 +5,7 @@
     <title>Servicentro</title>
     <link href="Content/bootstrap.min.css" rel="stylesheet" />
     <!--<link href="Content/bootstrap-theme.min.css" rel="stylesheet" />-->
-    <link href="Content/navbar-fixed-top.css" rel="stylesheet" />
+    <!--<link href="Content/navbar-fixed-top.css" rel="stylesheet" />-->
     <link href="Content/font-awesome.min.css" rel="stylesheet" />
     <link href="Content/StyleSheet.css" rel="stylesheet" />
     <script src="Scripts/angular.min.js"></script>
