Mejoras y nueva fuente

--- a/Servicentro2.0/index.html
+++ b/Servicentro2.0/index.html
@@ -12,7 +12,7 @@
     <script src="Scripts/Controllers/app.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-<body ng-controller="panelController as panel" ng-class="{ fondo:panel.isSelected(0)}">
+<body ng-controller="panelController as panel">
     <menu-sitio></menu-sitio>
     <menu-panel></menu-panel>
     <footer-sitio></footer-sitio>
