--- a/Servicentro2.0/menu-panel.html
+++ b/Servicentro2.0/menu-panel.html
@@ -11,7 +11,7 @@
     </div>
 </div>
 
-<div class="fondoInicio" ng-show="panel.isSelected(0)">
-    <img class="img-responsive" src="img/customLogo.png" />
-    <h1>Catolicos Haciendo ROCK!</h1>
+<div ng-show="panel.isSelected(0)" ng-class="{ fondo:panel.isSelected(0)}">
+    <!--<img class="img-responsive fondoLogo" src="img/customLogo.png" />-->
+    <h1 class="servicentro-font texto-portada">Catolicos Haciendo <span>ROCK!</span> </h1>
 </div>
