--- a/Servicentro2.0/menu-sitio.html
+++ b/Servicentro2.0/menu-sitio.html
@@ -1,8 +1,8 @@
 ﻿<div class="navbar navbar-default navbar-fixed-top">
-    <div class="container">
+    <div class="container-fluid">
         <div class='navbar-header'>
-            <a href="#" ng-click="panel.selectTab(0)" class="navbar-brand">
-                <img alt="Servicentro" src="img/customLogo.png" />
+            <a href="#" ng-click="panel.selectTab(0)" class="navbar-brand servicentro-font">
+                <!--<img alt="Servicentro" src="img/customLogo.png" />-->Servicentro
             </a>
             <button class='navbar-toggle collapsed' data-toggle='collapse' data-target='.navbar-nav' type='button'>
                 <span class='sr-only'>menu</span>
