Se agrega angular-touch

--- a/Servicentro2.0/index.html
+++ b/Servicentro2.0/index.html
@@ -9,6 +9,7 @@
     <link href="Content/font-awesome.min.css" rel="stylesheet" />
     <link href="Content/StyleSheet.css" rel="stylesheet" />
     <script src="Scripts/angular.min.js"></script>
+    <script src="Scripts/angular-touch.min.js"></script>
     <script src="Scripts/Controllers/app.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
