--- a/Servicentro2.0/index.html
+++ b/Servicentro2.0/index.html
@@ -8,10 +8,23 @@
     <!--<link href="Content/navbar-fixed-top.css" rel="stylesheet" />-->
     <link href="Content/font-awesome.min.css" rel="stylesheet" />
     <link href="Content/StyleSheet.css" rel="stylesheet" />
+    <link href="Content/baguetteBox.css" rel="stylesheet" />
     <script src="Scripts/angular.min.js"></script>
     <script src="Scripts/angular-touch.min.js"></script>
     <script src="Scripts/Controllers/app.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!--<script>
+        window.onload = function () {
+            baguetteBox.run('.gallery', {
+                captions: true, // true|false - Display image captions
+                buttons: 'auto', // 'auto'|true|false - Display buttons
+                async: true, // true|false - Load files asynchronously
+                preload: 2, // [number] - How many files should be preloaded from current image
+                animation: 'slideIn'
+            });
+        };
+    </script>-->
 </head>
 <body ng-controller="panelController as panel">
     <menu-sitio></menu-sitio>
@@ -20,5 +33,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="Scripts/bootstrap.min.js"></script>
+    <script src="Scripts/baguetteBox.js"></script>
+    <script src="/Scripts/lyrics.js"></script>
 </body>
 </html>
