--- a/Servicentro2.0/menu-panel.html
+++ b/Servicentro2.0/menu-panel.html
@@ -14,3 +14,300 @@
     <!--<img class="img-responsive fondoLogo" src="img/customLogo.png" />-->
     <h1 class="servicentro-font texto-portada texto-sobre-imagen">Catolicos Haciendo <span>ROCK!</span> </h1>
 </div>
+
+<div class="container lyrics" ng-show="panel.isSelected(3)">
+    <ul id="Temas" class="fa-ul">
+        <li itemscope itemtype="http://schema.org/MusicRecording" class="nombre" id="GusanoBacan">
+            <h3 itemprop="name"><i class="fa fa-plus-square fa-lg"></i> Gusano Ba<span class="rojo">c</span>án</h3>
+            <a href="http://www.servicentro.cl/src/mp3/01GusanoBacán.mp3" itemprop="url"></a>
+            <meta itemprop="duration" content="PT3M39S" />
+            <meta itemprop="inAlbum" content="Servicentro" />
+            <div class="letra">
+                <p>
+                    Grandes profesores libros de colores no me podrán enseñar.
+                    <br>Bellas emociones pueden ser veneno cuando no te saben amar.
+                    <br>Sacúdeme fuerte fuera de mi mente porque no te puedo pasar.
+                    <br>Quise respetarla quise comprenderla pero soy gusano bacán.
+                </p>
+                <p>
+                    <em>(Coro)</em>
+                    <br>Esa rebeldía tonta de una niña que recién comienza a pecar.
+                    <br>Es cierto que nada es como lo pintan y a ti no te pintan más.
+                </p>
+                <p>Acuérdate de mí, dios acuérdate de mí.</p>
+                <p>
+                    <em>(Solo)</em>
+                </p>
+                <p>
+                    <em>(Coro)</em>
+                    <br>Esa rebeldía tonta de una niña que recién comienza a pecar.
+                    <br>Es cierto que nada es como lo pintan y a ti no te pintan más.
+                </p>
+                <p>Acuérdate de mí, acuérdate señor de mí.</p>
+            </div>
+        </li>
+        <li itemscope itemtype="http://schema.org/MusicRecording" class="nombre" id="NoMeDejesIr">
+            <h3 itemprop="name"><i class="fa fa-plus-square fa-lg"></i> No Me Dejes Ir</h3>
+            <a href="http://www.reverbnation.com/servicentro/song/15849833-no-me-dejes-ir" itemprop="url"></a>
+            <meta itemprop="duration" content="PT3M39S" />
+            <meta itemprop="inAlbum" content="Servicentro" />
+            <div class="letra">
+                <p>
+                    <em>(Coro)</em>
+                    <br>Si aún no has conocido Amor Divino.
+                    <br>Esa soledad te quiere agarrar para seguir el castigo.
+                    <br>Si aún no has conocido Amor Divino.
+                    <br>La capacidad de poder amar todo lo que se ha perdido.
+                </p>
+                <p>
+                    No me dejes ir a ningún lugar, donde tú puedas faltarme
+                    <br>para hacerle frente a la soledad y a su frío delirante.
+                    <br>Abrázame fuerte, háblame despacio, cúbreme con tu regazo.
+                    <br>Sálvame de ir a la oscuridad, acompáñame, dame tu Luz.
+                </p>
+                <p>
+                    <em>(Coro)</em>
+                    <br>Si aún no has conocido Amor Divino.
+                    <br>Esa soledad te quiere agarrar para seguir el castigo.
+                    <br>Si aún no has conocido Amor Divino.
+                    <br>La capacidad de poder amar todo lo que se ha perdido.
+                </p>
+                <p>
+                    No me dejes ir a ningún lugar, donde tú no estés presente.
+                    <br>Yo no puedo solo yo no soy capaz, como tú fuiste valiente.
+                    <br>Esa madrugada sin preguntar nada, te entregaste enamorada.
+                    <br>Para ser la Reina de amor y dolor, te clavaste en este corazón.
+                </p>
+                <p>
+                    <em>(Coro)</em>
+                    <br>Si aún no has conocido Amor Divino.
+                    <br>Esa soledad te quiere agarrar para seguir el castigo.
+                    <br>Si aún no has conocido Amor Divino.
+                    <br>La capacidad de poder amar todo lo que se ha perdido.
+                </p>
+                <p>
+                    <em>(Solo)</em>
+                </p>
+                <p>
+                    <em>(Coro)</em>
+                    <br>Si aún no has conocido Amor Divino.
+                    <br>Esa soledad te quiere agarrar para seguir el castigo.
+                    <br>Si aún no has conocido Amor Divino.
+                    <br>La capacidad de poder amar todo lo que se ha perdido.
+                </p>
+            </div>
+        </li>
+        <li itemscope itemtype="http://schema.org/MusicRecording" class="nombre" id="ArmadurasPartidas">
+            <h3 itemprop="name"><i class="fa fa-plus-square fa-lg"></i> Armaduras Partidas</h3>
+            <a href="#" itemprop="url"></a>
+            <meta itemprop="duration" content="PT3M39S" />
+            <meta itemprop="inAlbum" content="Servicentro" />
+            <div class="letra">
+                <p>
+                    Disculpe la pretensión, no quisiera ofenderte.
+                    <br>Pero siendo sincero, tiempo sin verte.
+                    <br>Desde un rato a esta parte me han venido siguiendo,
+                    <br>Buscando sofocarme como si fuera incendio.
+                </p>
+                <p>
+                    Si tú me ayudas podemos hacer
+                    <br>Que el sordo escuche y volver a ver
+                </p>
+                <p>
+                    <em>(Coro)</em>
+                    <br>Templos llenos de armaduras partidas
+                    <br>Por los niños y cantos de bienvenida
+                    <br>Calles llenas de sonrisas diferentes
+                    <br>Y el abrazo de el que cree nuevamente
+                </p>
+                <p>
+                    Disculpe la pretensión, no tengo el derecho
+                    <br>Pero siendo sincero… ¿qué te habías hecho?
+                    <br>Porque hay dos o tres Judas que no entienden razones
+                    <br>Te condenan y pagan justos por pecadores
+                </p>
+                <p>
+                    Si tú me ayudas podemos hacer
+                    <br>Aseo en la casa y volver a ver
+                </p>
+                <p>
+                    <em>(Coro)</em>
+                    <br>Templos llenos de armaduras partidas
+                    <br>Por los niños y cantos de bienvenida
+                    <br>Calles llenas de sonrisas diferentes
+                    <br>Y el abrazo de el que cree nuevamente
+                </p>
+            </div>
+        </li>
+        <li itemscope itemtype="http://schema.org/MusicRecording" class="nombre" id="LaPataleta">
+            <h3 itemprop="name"><i class="fa fa-plus-square fa-lg"></i> La Pataleta</h3>
+            <a href="http://www.reverbnation.com/servicentro/song/17851657-la-pataleta" itemprop="url"></a>
+            <meta itemprop="duration" content="PT3M39S" />
+            <meta itemprop="inAlbum" content="Servicentro" />
+            <div class="letra">
+                <p>
+                    Cada vez que te busqué, acortando las distancias,
+                    <br>el destino me cayó, como paloma en la espalda.
+                    <br>Si es difícil ser tu amigo ¿Cómo voy a estar contigo?
+                    <br>Si es difícil ser tu amigo ¿Cómo voy a estar contigo?
+                </p>
+                <p>
+                    Si vamos a confesar, nadie tiene la paciencia,
+                    <br>de correr para ganar, hasta llegar a la meta.
+                    <br>Y tú te apareces para tirar la primera piedra.
+                    <br>Y tú te apareces para tirar la primera piedra.
+                </p>
+                <p>
+                    <em>(Coro)</em>
+                    <br>Cada vez que me olvidas, muere un poco de mi vida.
+                    <br>Cada vez que me olvidas, muere un poco de mi vida.
+                </p>
+                <p>
+                    Ahora me toca hablar y ya me estoy acordando,
+                    <br>De una historia singular, cuando te llevé en mis brazos.
+                    <br>Solo un par de huellas en la arena y pa´ que sigo hablando.
+                    <br>Solo un par de huellas en la arena y pa´ que sigo hablando.
+                </p>
+                <p>
+                    <em>(Coro)</em>
+                    <br>Cada vez que me olvidas, muere un poco de mi vida.
+                    <br>Cada vez que me olvidas, muere un poco de mi vida.
+                </p>
+                <p>
+                    <em>(Solo)</em>
+                </p>
+                <p>
+                    <em>(Coro)</em>
+                    <br>Cada vez que me olvidas, muere un poco de mi vida.
+                    <br>Cada vez que me olvidas, muere un poco de mi vida.
+                </p>
+            </div>
+        </li>
+        <li itemscope itemtype="http://schema.org/MusicRecording" class="nombre" id="Saname">
+            <h3 itemprop="name"><i class="fa fa-plus-square fa-lg"></i> Sáname</h3>
+            <a href="#" itemprop="url"></a>
+            <meta itemprop="duration" content="PT3M39S" />
+            <meta itemprop="inAlbum" content="Servicentro" />
+            <div class="letra">
+                <p>
+                    Sáname por favor, que ya no puedo más escapar de tu amor.
+                    <br>Sáname… es tu voz la que está en mi interior de que puedo estar mejor
+                </p>
+                <p>
+                    Dame fuerza, dame luz del sol
+                    <br>Porque sé que aunque duela me cuidará mi Dios
+                </p>
+                <p>
+                    Debo empezar a caminar contigo
+                    <br>Orar, crecer, amar, creer y empezar a actuar
+                    <br>Sáname que no puedo por mi mismo
+                    <br>He caído en un abismo, sólo tú puedes salvarme Señor
+                </p>
+                <p>
+                    Te quiero agradecer por mi familia y mis amigos
+                    <br>Me ayudaron a ver que siempre estarán conmigo
+                    <br>La soledad no me visitará porque los tengo a ellos
+                    <br>Y si un día se van
+                </p>
+                <p>
+                    Tú me acompañarás, tú me guiarás
+                    <br>En cada uno de mis pasos, conmigo estarás
+                </p>
+                <p>
+                    Sáname que quiero cantar,
+                    <br>al mundo quiero gritar que tú nos vienes a salvar.
+                    <br>Manifiéstate, estremece nuestro ser,
+                    <br>ayúdanos a creer para empezar a actuar y hacer el bien.
+                </p>
+                <p>
+                    Sáname que quiero cantar,
+                    <br>al mundo quiero gritar que tú nos vienes a salvar.
+                    <br>Manifiéstate, estremece nuestro ser,
+                    <br>ayúdanos a creer para empezar a actuar y hacer el bien.
+                </p>
+            </div>
+        </li>
+        <li itemscope itemtype="http://schema.org/MusicRecording" class="nombre" id="ManInBlack">
+            <h3 itemprop="name"><i class="fa fa-plus-square fa-lg"></i> Man In Bla<span class="rojo">c</span>k (Los Hijos del Amor)</h3>
+            <a href="http://www.reverbnation.com/servicentro/song/17851475-man-in-black-los-hijos-del-amor" itemprop="url"></a>
+            <meta itemprop="duration" content="PT3M39S" />
+            <meta itemprop="inAlbum" content="Servicentro" />
+            <div class="letra">
+                <p>
+                    Un hombre de negro bajó a golpear la puerta de mi corazón, con una sonrisa.
+                    <br>Me tendió la mano y habló de una casa nueva que no es de cartón, sin barro y sin cenizas.
+                </p>
+                <p>
+                    Si tu no quieres venir me harás volver,
+                    <br>por Dios y por Jesús debes tener, vida diferente.
+                </p>
+                <p>
+                    <em>(Coro)</em>
+                    <br>Somos los hijos del amor, bendito aquel que encuentre.
+                    <br>Alberto Hurtado lleva a Dios en camioneta verde, en camioneta verde.
+                </p>
+                <p>
+                    Esta noche vengo Señor, a la rivera en que me descubrió, a buscar tus hijos.
+                    <br>Vestido de negro también, para ofrecer una vida mejor, y como el Santo dijo.
+                </p>
+                <p>
+                    Si tu no quieres venir me harás volver,
+                    <br>por Dios y por Jesús debes tener, vida diferente.
+                </p>
+                <p>
+                    <em>(Coro)</em>
+                    <br>Somos los hijos del amor, bendito aquel que encuentre.
+                    <br>Alberto Hurtado lleva a Dios en camioneta verde, en camioneta verde.
+                </p>
+            </div>
+        </li>
+        <li itemscope itemtype="http://schema.org/MusicRecording" class="nombre" id="YoLeDire">
+            <h3 itemprop="name"><i class="fa fa-plus-square fa-lg"></i> Yo le Diré</h3>
+            <a href="http://www.reverbnation.com/servicentro/song/17851529-yo-le-dir" itemprop="url"></a>
+            <meta itemprop="duration" content="PT3M39S" />
+            <meta itemprop="inAlbum" content="Servicentro" />
+            <div class="letra">
+                <p>
+                    Perdón señor, si lo que canto no es válido para usted,
+                    <br>o si toco en lo más hondo de su ser. ¿Y qué hay? Dirá usted, dirá usted.
+                    <br>Alguien me contó, que solo piensa en el trabajo y en el deber.
+                    <br>Que sufre por el dinero que se fue. ¿Y qué hay? Mire usted, mire usted.
+                </p>
+                <p>
+                    <em>(Coro)</em>
+                    <br>Yo le diré, que el presente y el pasado no puede perder.
+                    <br>Que el futuro es importante por lo que no fue, mire usted.
+                    <br>Le encantará darse cuenta que su vida no termina acá.
+                    <br>Que hay una emoción que grita en la profundidad de su ser.
+                </p>
+                <p>
+                    Alguien me contó, que solo piensa en el trabajo y en el deber
+                    <br>Que sufre por el dinero que se fue. ¿Y qué hay? Mire usted, mire usted.
+                </p>
+                <p>
+                    <em>(Coro)</em>
+                    <br>Yo le diré, que el presente y el pasado no puede perder.
+                    <br>Que el futuro es importante por lo que no fue, mire usted.
+                    <br>Le encantará darse cuenta que su vida no termina acá.
+                    <br>Que hay una emoción que grita en la profundidad de su ser.
+                </p>
+                <p>Cita con Dios el martes a las seis.</p>
+                <p>Él le dirá qué hacer.</p>
+            </div>
+        </li>
+    </ul>
+</div>
+
+<div class="container galeria" ng-show="panel.isSelected(4)" ng-controller="albumsController as albums">
+    <div ng-repeat="album in albums.albums">
+        <h4 class="row">{{album.ano}} - {{album.nombre}} - {{album.ciudad}}, {{album.pais}}</h4>
+        <ul albumid="{{album.id}}" class="row baguetteBox{{album.id}}">
+            <li ng-repeat="foto in album.fotos" class="col-lg-2 col-md-2 col-sm-3 col-xs-4">
+                <a href="img/galerias/{{album.ano}}{{album.nombre}}/{{album.ano}}-{{album.nombre}}-{{foto}}.jpg" data-caption="{{album.ano}} - {{album.nombre}} - {{album.ciudad}}, {{album.pais}}">
+                    <img class="img-responsive" ng-src="img/galerias/{{album.ano}}{{album.nombre}}/{{album.ano}}-{{album.nombre}}-{{foto}}.jpg">
+                </a>
+            </li>
+        </ul>
+    </div>
+
+</div>
