--- a/Servicentro2.0/menu-panel.html
+++ b/Servicentro2.0/menu-panel.html
@@ -309,5 +309,31 @@
             </li>
         </ul>
     </div>
+</div>
 
+<div class="container panel panel-default" ng-show="panel.isSelected(6)">
+	<form class="panel-body">
+		<p>Tienes alguna duda, comentario o sugerencia? Nos gustaria saber de ti! Mándanos un mensaje!</p>
+		<div class="form-group">
+			<label for="name">Nombre*:</label>
+			<input class="form-control" type="text" placeholder="Ingresa tu nombre" name="name" id="name" required autofocus>
+		</div>
+		<div class="form-group">
+			<label for="city">Ciudad*:</label>
+			<input class="form-control" type="text" placeholder="Ingresa tu ciudad" name="city" id="city" required>
+		</div>
+		<div class="form-group">
+			<label for="phone">Teléfono:</label>
+			<input class="form-control" type="tel" placeholder="Ingresa tu telefono" name="tel" id="phone">
+		</div>
+		<div class="form-group">
+			<label for="email">Correo*:</label>
+			<input class="form-control" type="email" placeholder="tucorreo@mail.com" name="email" id="email" required>
+		</div>
+		<div class="form-group">
+			<label for="message">Pregunta o comentario*</label>
+			<textarea class="form-control" name="message" id="message" placeholder="Ingresa tu mensaje" required></textarea>
+		</div>
+		<input class="btn btn-default" type="submit" name="Submit" value="Enviar">
+	</form>
 </div>
