Se agrega favicon

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,8 @@
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" />
     <link href="stylesheets/style.css" rel="stylesheet" />
     <link href="stylesheets/baguetteBox.css" rel="stylesheet" />
-
+    <link rel="shortcut icon" href="images/favicon.ico"/>
+    
     <script src="javascripts/angular.min.js"></script>
     <script src="javascripts/angular-touch.min.js"></script>
     <script src="javascripts/angular-route.min.js"></script>
