--- a/public/index.html
+++ b/public/index.html
@@ -11,19 +11,32 @@
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" />
     <link href="stylesheets/style.css" rel="stylesheet" />
     <link href="stylesheets/baguetteBox.css" rel="stylesheet" />
+    <link href="stylesheets/a.css" rel="stylesheet" />
+
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+    <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
+
     <link rel="shortcut icon" href="images/favicon.ico"/>
-    
-    <script src="javascripts/angular.min.js"></script>
-    <script src="javascripts/angular-touch.min.js"></script>
-    <script src="javascripts/angular-route.min.js"></script>
-    <script src="javascripts/app.js"></script>
 </head>
-<body>
+<body id="page-top" class="index" ng-controller="SmoothScroll">
     <menu-sitio></menu-sitio>
     <div ng-view style="height:inherit;"></div>
 
+    <script src="javascripts/angular.min.js"></script>
+    <script src="javascripts/angular-touch.min.js"></script>
+    <script src="javascripts/angular-route.min.js"></script>
+    <script src="javascripts/angular-scroll.js"></script>
+    <script src="javascripts/app.js"></script>
     <script src="jquery/dist/jquery.min.js" ></script>
     <script src="bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="javascripts/baguetteBox.js"></script>
+
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+    <script src="javascripts/a.js"></script>
+    <script src="javascripts/cbpAnimatedHeader.js"></script>
+    <script src="javascripts/classie.js"></script>
+
 </body>
 </html>
