--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     <link href="stylesheets/style.css" rel="stylesheet" />
     <link href="stylesheets/baguetteBox.css" rel="stylesheet" />
     <link href="stylesheets/a.css" rel="stylesheet" />
+    <link href="stylesheets/fondeadora.css" rel="stylesheet" />
 
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
@@ -32,8 +33,9 @@
     <script src="jquery/dist/jquery.min.js" ></script>
     <script src="bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="javascripts/baguetteBox.js"></script>
+    <script src="javascripts/fondeadora.js"></script>
 
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
     <script src="javascripts/a.js"></script>
     <script src="javascripts/cbpAnimatedHeader.js"></script>
     <script src="javascripts/classie.js"></script>
