--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,13 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
 
     <link rel="shortcut icon" href="images/favicon.ico"/>
+
+    <script async src='//www.google-analytics.com/analytics.js'></script>
+    <script>
+      window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
+      ga('create', 'UA-50419520-1', 'servicentro.cl');
+      ga('send', 'pageview');
+    </script>
 </head>
 <body id="page-top" class="index" ng-controller="SmoothScroll">
     <menu-sitio></menu-sitio>
