--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,8 @@
-﻿<!doctype html>
-<html ⚡ lang="es" ng-app="servicentro">
+﻿<!DOCTYPE html>
+<html lang="es" ng-app="servicentro">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <base href="/">
 
     <title>Servicentro</title>
@@ -18,7 +18,7 @@
     <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
-    <link rel="canonical" href="//servicentro.cl/" />
+
     <link rel="shortcut icon" href="images/favicon.ico"/>
 
     <script async src='//www.google-analytics.com/analytics.js'></script>
@@ -27,8 +27,6 @@
       ga('create', 'UA-50419520-1', 'servicentro.cl');
       ga('send', 'pageview');
     </script>
-    <script async src="https://cdn.ampproject.org/v0.js"></script>
-    <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
 </head>
 <body id="page-top" class="index" ng-controller="SmoothScroll">
     <menu-sitio></menu-sitio>
