Cambios nuevos temas, SEO

--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,22 @@
       ga('create', 'UA-50419520-1', 'servicentro.cl');
       ga('send', 'pageview');
     </script>
+    <script type="application/ld+json">
+    {
+        "@context": "http://schema.org",
+        "@type": "MusicGroup    ",
+        "name": "Servicentro",
+        "url": "http://www.servicentro.cl",
+        "image" : "http://www.servicentro.cl/images/ServicentroBanda.png", 
+        "logo": "http://www.servicentro.cl/images/servicentro256.jpg",
+        "sameAs": [
+            "http://www.facebook.com/Servicentrocl",
+            "http://twitter.com/Servicentro_cl",
+            "http://plus.google.com/108680490166455718892",
+            "http://www.youtube.com/channel/UCzh_MtK7xNV14i4THYnUYIQ"
+        ]
+    }
+    </script>
 </head>
 <body id="page-top" class="index" ng-controller="SmoothScroll">
     <menu-sitio></menu-sitio>
