--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1">
     <meta name="theme-color" content="#222">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="description" content="Somos un punto de encuentro en el camino, una banda, una experiencia de Rock. Detente un momento y escucha, celebra, ama y carga energías. Luego puedes continuar tu ruta, en tu maleta… hemos dejado un mensaje.">
+    
     <base href="/">
 
     <title>Servicentro</title>
@@ -22,7 +24,8 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
 
     <link rel="shortcut icon" href="images/favicon.ico"/>
-
+    <link rel="canonical" href="http://www.servicentro.cl">
+    
     <script async src='//www.google-analytics.com/analytics.js'></script>
     <script>
       window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
