--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,27 @@
             "http://twitter.com/Servicentro_cl",
             "http://plus.google.com/108680490166455718892",
             "http://www.youtube.com/channel/UCzh_MtK7xNV14i4THYnUYIQ"
-        ]
+        ],
+        "description":"Somos un punto de encuentro en el camino, una banda, una experiencia de Rock. Detente un momento y escucha, celebra, ama y carga energías. Luego puedes continuar tu ruta, en tu maleta… hemos dejado un mensaje.",
+        "potentialAction": {
+            "@type": "ListenAction",
+            "target": [
+                {
+                    "@type": "EntryPoint",
+                    "urlTemplate": "http://www.servicentro.cl/",
+                    "actionPlatform": [
+                        "http://schema.org/DesktopWebPlatform",
+                        "http://schema.org/IOSPlatform",
+                        "http://schema.org/AndroidPlatform"
+                    ],
+                    "InLanguage": "ES"
+                }
+            ],
+            "expectsAcceptanceOf": {
+                "@type": "Offer",
+                "eligibleRegion": []
+            }
+        }
     }
     </script>
 </head>
