--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1">
     <meta name="theme-color" content="#222">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="description" content="Somos un punto de encuentro en el camino, una banda, una experiencia de Rock. Detente un momento y escucha, celebra, ama y carga energías. Luego puedes continuar tu ruta, en tu maleta… hemos dejado un mensaje.">
+    <meta name="description" content="Pagina oficial de la banda de rock Chileno Servicentro, encuentra la letra de nuestra música, videos e información relevante de la banda.">
     
     <base href="/">
 
