--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
         "name": "Servicentro",
         "url": "http://www.servicentro.cl",
         "image" : "http://www.servicentro.cl/images/ServicentroBanda.png", 
-        "logo": "http://www.servicentro.cl/images/servicentro256.jpg",
+        "logo": "https://upload.wikimedia.org/wikipedia/commons/7/73/Servicentro2.png",
         "sameAs": [
             "http://www.facebook.com/Servicentrocl",
             "http://twitter.com/Servicentro_cl",
