--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="theme-color" content="#222">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="description" content="Pagina oficial de la banda de rock Chileno Servicentro, encuentra la letra de nuestra música, videos e información relevante de la banda.">
+    <link href="https://plus.google.com/108680490166455718892" rel="publisher" />
     
     <base href="/">
 
