--- a/public/index.html
+++ b/public/index.html
@@ -36,8 +36,40 @@
     <script type="application/ld+json">
     {
         "@context": "http://schema.org",
-        "@type": "MusicGroup",
+        "@id": "kg:/g/11f2wbv859",
+        "name": "Construyamos Esperanza",
+        "@type": [
+             "Thing",
+             "MusicAlbum"
+        ],
+        "image": [
+        "https://cdbaby.name/s/e/servicentro2_large.jpg"
+       ]
+    }
+    </script>
+    <script type="application/ld+json">
+    {
+        "@context": "http://schema.org",
+        "@id": "kg:/g/11c82qmxtv",
+        "name": "Kilómetro 1",
+        "@type": [
+             "Thing",
+             "MusicAlbum"
+        ],
+        "image": [
+        "https://cdbaby.name/s/e/servicentro_large.jpg"
+       ]
+    }
+    </script>
+    <script type="application/ld+json">
+    {
+        "@context": "http://schema.org",
+        "@id": "kg:/g/11df0pfn6m",
         "name": "Servicentro",
+        "@type": [
+            "Thing",
+            "MusicGroup"
+        ],
         "url": "http://www.servicentro.cl",
         "image" : "http://www.servicentro.cl/images/ServicentroBanda.png", 
         "logo": "https://upload.wikimedia.org/wikipedia/commons/7/73/Servicentro2.png",
